[metadata]
name = jsUtils
version = 0.0.1
author = Jason Sebek
author_email = jabekengineer@gmail.com
description = My toolbox of useful snippets and utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jabekengineer/jsUtils
project_urls =
    Bug Tracker = https://github.com/jabekengineer/jsUtils/tree/main/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

